--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.gnacek'
 version '1.0-SNAPSHOT'
+
+mainClassName = 'S3ObjectOperations'
 
 sourceCompatibility = 1.8
 
@@ -11,8 +14,21 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main.java.srcDir "src/main/java"
+    main.resources.srcDir "src/main/resources"
+}
+
 dependencies {
     implementation platform('software.amazon.awssdk:bom:2.5.29')
     implementation 'software.amazon.awssdk:s3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'S3ObjectOperations'
+        )
+    }
 }
