--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,14 @@ jar {
         )
     }
 }
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes(
+                'Main-Class': 'S3ObjectOperations'
+        )
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
